@@ -1,0 +1,2 @@
+#define VERSION  "version " PACKAGE_VERSION " [16-Jan-2020]"
+#define BUG_ADDRESS "issue@texjp.org"
